--- a/myDemo-dubboservice/src/main/resources/application-dev.properties
+++ b/myDemo-dubboservice/src/main/resources/application-dev.properties
@@ -20,16 +20,22 @@ spring.kafka.consumer.auto-offset-reset=earliest
 
 #mysql.jdbcUrl=jdbc:mysql://168.168.98.173:3306/htbcps?useUnicode=true&useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&&autoReconnect=true
 #mysql.jdbcUrl=jdbc:mysql://168.61.3.100:3309/htbcps?useUnicode=true&useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&&autoReconnect=true
-mysql.jdbcUrl=jdbc:mysql://127.0.0.1:3309/htbcps?useUnicode=true&useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&&autoReconnect=true
+#mysql.jdbcUrl=jdbc:mysql://127.0.0.1:3309/htbcps?useUnicode=true&useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&&autoReconnect=true
 
 #mysql config
-mysql.username=root
-mysql.password=root
+#mysql.username=root
+#mysql.password=root
 #mysql.username=htbcps
 #mysql.password=htscbcpspass
 mybatis.mysql.basePackage=com.htsc.htbcps.myDemo.dal.dao
-mysql.mysqlMapperLocation=classpath:META-INF/mybatis/mapping
-mysql.datasource=htbcps
+mybatis.mapperLocations=classpath:META-INF/mybatis/mapping
+logging.level.com.dy.springboot.server.mapper=debug
+#mysql.mysqlMapperLocation=classpath:META-INF/mybatis/mapping
+#mysql.datasource=htbcps
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3309/htbcps?useUnicode=true&useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=root
 
 ## redis
 ## dev & test
