--- a/myDemo-dubboservice/src/main/resources/application.properties
+++ b/myDemo-dubboservice/src/main/resources/application.properties
@@ -5,11 +5,14 @@ info.version=1.0.0-RELEASE
 # dubbo config
 dubbo.application.name=myDemo
 dubbo.application.owner=myDemo
-dubbo.application.logger=slf4j
+#dubbo.application.logger=slf4j
 #dubbo.registry.client=curator
 #dubbo.monitor.protocol=registry
 dubbo.reference.timeout=10000
 mc.proxy.dubbo.version=1.0.0
 #
 spring.profiles.active=dev
+
+# config
+logging.config = classpath:logback-spring.xml
 
