--- a/myDemo-dubboservice/src/main/resources/application-dev.properties
+++ b/myDemo-dubboservice/src/main/resources/application-dev.properties
@@ -59,3 +59,6 @@ spring.datasource.max-wait=10000
 spring.datasource.min-idle=5  
 spring.datasource.initial-size=5 
 mybatis.mapper-locations=classpath:META-INF/mybatis/mapping/*Mapper.xml
+
+#MongoDB
+spring.data.mongodb.uri=mongodb://127.0.0.1/runoob?maxPoolSize=256
