--- a/myDemo-mongodb/pom.xml
+++ b/myDemo-mongodb/pom.xml
@@ -7,11 +7,8 @@
     <artifactId>myDemo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.htsc.htbcps</groupId>
   <artifactId>myDemo-mongodb</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <name>myDemo-mongodb</name>
-  <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -19,8 +16,11 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+     </dependency>
   </dependencies>
 </project>
